last ui fixes
ui isn't looking good :(
functuinality & code working great

--- a/onestep/src/Walks/SingleWalk/index.module.scss
+++ b/onestep/src/Walks/SingleWalk/index.module.scss
@@ -1,16 +1,34 @@
-.contentContainer {
-  display: flex;
-  justify-content: space-around;
+.cardContainer {
+  animation: fadeIn 1s;
 
-  .cardsContainer {
-    display: flex;
-    flex: 2;
-    flex-direction: row; 
-    justify-content: space-between;
-    flex-wrap: wrap;
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    
+    to {
+      opacity: 1;
+    }
   }
-
-  .insightsContainer {
-    flex: 1;
+  
+  .contentContainer {
+    display: flex;
+    justify-content: space-around;        
+  
+    .cardsContainer {
+      display: flex;
+      flex: 2;
+      flex-direction: row; 
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+  
+    .insightsContainer {
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex: 1;
+      background-color: bisque;
+    }
   }
 }
